# opengl-learn

./: .gitignore  CMakeLists.txt  README.md
exercises/shader 3/: shader.fs  shader.vs
exercises/texture 234/: main.cpp
exercises/texture exercise234/: shader.fs
exercises/trans 12/: main.cpp  shader.vs
include/: camera.h  mesh.hpp  model.hpp  shader.h  shader.hpp
script/: run.bat
shaders/: lightShader.fs  lightShader.vs  lightSourceShader.fs  shader.fs  shader.gs  shader.vs  singleShader.fs  skyboxShader.fs  skyboxShader.vs
src/: exercise2.cpp  exercise3.cpp  main.cpp  main_copy.cpp  shader.cpp
